--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>画板</title>
+
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    hi
+    <canvas id="canvas">
+        <div id="eraser"></div>
+    </canvas>
+    <button>橡皮擦</button>
+
+    <script src="./main.js"></script>
 </body>
+
 </html>
