--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 
 <body>
     <canvas id="canvas">
-        <div id="eraser"></div>
     </canvas>
-    <button>橡皮擦</button>
-
+    <button id="eraser">橡皮擦</button>
+    <button id="brush">画笔</button>
     <script src="./main.js"></script>
 </body>
 
