增加清空按钮

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </canvas>
     <button id="eraser">橡皮擦</button>
     <button id="brush">画笔</button>
+    <button id="wipe">清空</button>
     <script src="./main.js"></script>
 </body>
 
