下载功能，画笔粗细

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>画板</title>
 
     <link rel="stylesheet" href="./style.css">
-    <script src="//at.alicdn.com/t/font_1096518_222tcuz3uz.js"></script>
+    <script src="//at.alicdn.com/t/font_1096518_vivkxr1l9uo.js"></script>
 </head>
 
 <body>
@@ -27,10 +27,21 @@
         <use xlink:href="#icon-lajixiang"></use>
     </svg>
 
+    <svg class="icon" id="download" aria-hidden="true">
+        <use xlink:href="#icon-download"></use>
+    </svg>
+
     <ul class="colorPicker">
-        <li id="red" class="active"></li>
+        <li id="black" class="active"></li>
+        <li id="red"></li>
         <li id="green"></li>
         <li id="blue"></li>
+    </ul>
+
+    <ul class="lWidth">
+        <li id="thin"></li>
+        <li id="mid"></li>
+        <li id="thick"></li>
     </ul>
     <script src="./main.js"></script>
 </body>
